update backend contracts, makes communication with UI easier